--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 @media (min-width: 768px) {
     .view {
         overflow: visible;
-        margin-top: -56px;
     }
 }
 
@@ -24,6 +23,10 @@ header,
     overflow-x: hidden;
 }
 
+.main-flex{
+    margin-top: -728px;
+    margin-bottom: 226px;
+}
 .navbar-dark .navbar-nav .nav-link {
     color: #ffffff;
 }
@@ -58,13 +61,13 @@ header,
 
 .buttonToCourse {
     display: inline-block;
-    padding: 20px 40px;
+    padding: 15px 30px;
     background-color: SlateGrey;
     color: white;
     text-decoration: none;
     border-radius: 8px;
-    font-size: 25px;
-    border: 2px solid SlateGrey;
+    font-size: 20px;
+    border: 2px solid rgb(55, 66, 76);
     transition: border-color 0.3s;
 }
 
