--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,7 +82,9 @@ header,
     opacity: 0;
     animation: fade-in-animation 2s forwards;
 }
-
+a {
+    text-decoration: none;
+  }
 @keyframes fade-in-animation {
     0% {
         opacity: 0;
