--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,9 +78,11 @@ header,
     opacity: 0;
     animation: fade-in-animation 2s forwards;
 }
+
 a {
     text-decoration: none;
-  }
+}
+
 @keyframes fade-in-animation {
     0% {
         opacity: 0;
@@ -90,4 +92,7 @@ a {
         opacity: 1;
     }
 }
+
 /* header */
+
+/* course */
